bpo-39520: Fix unparsing of ext slices with no dimentions